<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">front</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="R">mycollection</string>
    <string name="G">gggg</string>
    <string name="Layer11_top">layer11</string>
    <string name="Background">Background</string>
    <string name="User1">User1</string>
    <string name="User2">User2</string>
    <string name="User3">User3</string>
    <string name="User4">User4</string>
    <string name="User5">User5</string>
    <string name="Expand">Add users</string>
    <string name="Document">Document</string>
    <string name="Strip">Strip</string>
    <string name="Video">Video</string>
    <string name="Folder">Folder</string>
    <string name="Video1">Video</string>
    <string name="Pic">Pic</string>
    <string name="Guidingbar">New Button</string>
    <string name="Topbartext"><![CDATA[Group ->LearnMixer]]></string>
    <string name="Dividedline">Divided line</string>
    <string name="Dividingline">Dividingline</string>
    <string name="Expanding">Expand</string>
    <string name="Trashbin">Trashbin</string>
    <string name="Youtube">Youtube</string>
    <string name="Chrome">Chrome</string>
    <string name="Slide">Slide</string>
    <string name="title_activity_group">Group</string>
    <string name="Groups">Groups</string>
    <string name="MyClass">New Button</string>
    <string name="Myclass">My Class</string>
    <string name="MGroup">MGroup</string>
    <string name="title_activity_users">Users</string>

</resources>
